Mod updates, Added Astral Sorcery, Storage Drawers

--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -30,6 +30,7 @@ general {
 modules {
     B:BloodMagic.array=true
     B:BloodMagic.bloodAltar=true
+    B:BloodMagic.bloodTank=true
     B:BloodMagic.bypassSneak=false
     B:BloodMagic.ritualController=true
     B:BloodMagic.teleposer=true
@@ -40,6 +41,9 @@ modules {
     B:EvilCraft.innerBlock=true
     B:EvilCraft.tank=true
     B:HQM.showQDS=true
+    B:display.content=true
+    B:display.stacklimit=true
+    B:display.status=true
     B:general.showcrop=true
     B:general.showents=true
     B:general.showhp=true
@@ -80,6 +84,7 @@ modules {
 server_forcing {
     B:BloodMagic.array=false
     B:BloodMagic.bloodAltar=false
+    B:BloodMagic.bloodTank=false
     B:BloodMagic.bypassSneak=false
     B:BloodMagic.ritualController=false
     B:BloodMagic.teleposer=false
@@ -90,6 +95,9 @@ server_forcing {
     B:EvilCraft.innerBlock=false
     B:EvilCraft.tank=false
     B:HQM.showQDS=false
+    B:display.content=false
+    B:display.stacklimit=false
+    B:display.status=false
     B:general.showcrop=false
     B:general.showents=false
     B:general.showhp=false
