--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -233,6 +233,7 @@ crafting {
     B:am2.blocks.BlockEffigy=true
     B:am2.blocks.BlockWitchwoodLog=true
     B:am2.blocks.BlockWitchwoodPlanks=true
+    B:com.jaquadro.minecraft.storagedrawers.block.BlockTrim=true
     B:com.minecolonies.coremod.blocks.BlockSolidSubstitution=true
     B:com.minecolonies.coremod.blocks.BlockSubstitution=true
     B:com.shinoow.abyssalcraft.common.blocks.BlockACBasic=true
@@ -255,6 +256,10 @@ crafting {
     B:elucent.roots.block.BlockDoubleSlabBase=true
     B:elucent.roots.block.BlockLogBase=true
     B:elucent.roots.block.BlockSandBase=true
+    B:hellfirepvp.astralsorcery.common.block.BlockBlackMarble=true
+    B:hellfirepvp.astralsorcery.common.block.BlockCustomOre=true
+    B:hellfirepvp.astralsorcery.common.block.BlockCustomSandOre=true
+    B:hellfirepvp.astralsorcery.common.block.BlockMarble=true
     B:lumien.randomthings.block.BlockBiomeStone=true
     B:lumien.randomthings.block.BlockContactLever=true
     B:lumien.randomthings.block.BlockDyeingMachine=true
@@ -340,6 +345,7 @@ crafting {
     B:team.chisel.common.block.BlockCarvableAltarComponent=true
     B:team.chisel.common.block.BlockCarvableBookshelf=true
     B:team.chisel.common.block.BlockCarvableCarpet=true
+    B:team.chisel.common.block.BlockCarvableTranquility=true
     B:teamroots.goetia.common.blocks.BlockAltar=true
     B:vazkii.botania.common.block.BlockDreamwood=true
     B:vazkii.botania.common.block.BlockEnchantedSoil=true
