--- a/config/minecolonies.cfg
+++ b/config/minecolonies.cfg
@@ -16,6 +16,33 @@ gameplay {
     # Does Builder have infinite resources?
     B:builderInfiniteResources=false
 
+    # Players get RespawnCitizensCommand
+    B:canPlayerRespawnCitizensCommand=true
+
+    # Players get AddOfficerCommand
+    B:canPlayerUseAddOfficerCommand=true
+
+    # Players get CitizenInfoCommand
+    B:canPlayerUseCitizenInfoCommand=true
+
+    # Players get DeleteColonyCommand
+    B:canPlayerUseDeleteColonyCommand=true
+
+    # Players get KillCitizensCommand
+    B:canPlayerUseKillCitizensCommand=true
+
+    # Players get ListCitizensCommand
+    B:canPlayerUseListCitizensCommand=true
+
+    # Players can use the MC TP Command or not
+    B:canPlayerUseRTPCommand=true
+
+    # Players get RefreshColonyCommand
+    B:canPlayerUseRefreshColonyCommand=false
+
+    # Players get ShowColonyInfoCommand
+    B:canPlayerUseShowColonyInfoCommand=true
+
     # Chat Frequency (seconds)
     I:chatFrequency=30
 
@@ -37,8 +64,17 @@ gameplay {
     # Maximum number of citizens
     I:maxCitizens=4
 
+    # Distance from spawn in all directions
+    I:maxDistanceFromWorldSpawn=8000
+
+    # Should builder place construction tape
+    B:placeConstructionTape=true
+
     # Allow crafting of a Supply Chest
     B:supplyChests=true
+
+    # Time until the next teleport in seconds
+    I:timeBetweenTeleport=120
 
     # Empty space between town hall boundaries
     I:townHallPadding=20
