--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Sat Feb 11 12:01:23 GMT-06:00 2017
+#Mon Mar 13 13:08:25 CDT 2017
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
