--- a/config/JEI/worldSettings.cfg
+++ b/config/JEI/worldSettings.cfg
@@ -34,6 +34,19 @@ world1855637915 {
 }
 
 
+world785103634 {
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=false
+
+    # Hide and unhide items by clicking them in the item list.
+    B:editEnabled=false
+    S:filterText=
+
+    # Show the list of items next to open guis.
+    B:overlayEnabled=true
+}
+
+
 world856609915 {
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=false
