--- a/config/foamfix.cfg
+++ b/config/foamfix.cfg
@@ -13,21 +13,31 @@ client {
 
 
 coremod {
-    # Prevents BlockInfo from generating as many BlockPos objects; also, fixes a lighting bug. [default: true]
+    # Stops certain non-Minecraft-related libraries from being ASM transformed. You shouldn't be transforming those anyway. [default: true]
+    B:blacklistLibraryTransformers=true
+
+    # Make 3D forms of items be rendered dynamically and cached when necessary. [default: true]
+    B:dynamicItemModels=true
+
+    # Faster @SideOnly ASM transformer - makes the game load faster [default: true]
+    B:fasterSideTransformer=true
     B:optimizedBlockInfo=true
 
     # Optimizes BlockPos mutable/immutable getters to run on the same variables, letting them be inlined and thus theoretically increasing performance. [default: true]
     B:optimizedBlockPos=true
+
+    # Replaces the default BlockState/ExtendedBlockState implementations with a far more memory-efficient variant. [default: true]
+    B:smallPropertyStorage=true
 }
 
 
 experimental {
+    # Prevents redundant BlockInfo calculations by keeping ChunkInfo objects around. Buggy! [default: false]
+    B:chunkedBlockInfo=false
     B:optimizedBlockPos=true
 
     # Not fully benchmarked, experimental minor lighting calculation code optimization - according to preliminary tests, it doesn't impact performance while reducing GC churn. [default: true]
     B:smallLightingOptimize=true
-
-    # Replaces the default BlockState/ExtendedBlockState implementations with a far more memory-efficient variant. [default: true]
     B:smallPropertyStorage=true
 }
 
