--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Sat Feb 11 12:00:11 GMT-06:00 2017
+#Mon Mar 13 13:07:32 CDT 2017
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
